apps/base/echo/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: echo
  namespace: staging
spec:
  selector:
    app: echo
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
type: NodePort
