apps/base/echo/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echo
  namespace: staging
spec:
  rules:
    - host: echo.staging.fellesdatakatalog.digdir.no
      http:
        paths:
          - backend:
              service:
                name: echo
                port:
                  number: 80
            path: /
            pathType: Prefix
